cmake_minimum_required(VERSION 2.8.12)

SET(PROJECTNAME homework6)
PROJECT(${PROJECTNAME} LANGUAGES CUDA C CXX)

SET(PROJECT_SRCS
    main.cu
  ) 

SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Werror -03")
SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -rdc=true -arch=sm_61")

FIND_PACKAGE( OpenCV REQUIRED )

INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} include)

INCLUDE_DIRECTORIES( inc )

SET(LIBRARIES ${CUDA_LIBRARIES} ${OpenCV_LIBS})


ADD_EXECUTABLE(${PROJECTNAME} ${PROJECT_SRCS})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON )
SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON )
SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES CUDA_ARCHITECTURES OFF )